--- a/Day70Demo/appsettings.json
+++ b/Day70Demo/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSecuritySettings": {
+    "SecurityKey": "54d6504255f2effe17f74a8b8170e7a8ece0fc79",
+    "TokenValiditySeconds": 300
+  }
 }
